--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,8 @@
-$icon-font-path: "../fonts/";
+$icon-font-path: "../fonts/bootstrap-sass-official/assets/fonts/bootstrap/";
+$fa-font-path:   "../fonts/font-awesome/fonts/";
 
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "bootstrap";
+@import "font-awesome";
 
 .browsehappy {
     margin: 0.2em 0;
@@ -10,82 +12,174 @@ $icon-font-path: "../fonts/";
 }
 
 /* Space out content a bit */
+//body {
+//    padding-bottom: 20px;
+//    margin-top: 20px;/* make room for the nav bar */
+//    padding-top: 50px;
+//}
+//
+//div.bs-scrolling[id]{
+//    padding-top: 50px;
+//    margin-top: -50px;
+//}
+
 body {
-    padding-top: 70px;
-    padding-bottom: 20px;
+    position: relative;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
-
-    /* Make the masthead heading the same height as the navigation */
-    h3 {
-        margin-top: 0;
-        margin-bottom: 0;
-        line-height: 40px;
-        padding-bottom: 19px;
-    }
-}
-
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-    margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-    .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-    }
-}
-
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
-    p + h4 {
-        margin-top: 28px;
-    }
+#resume {
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 730px;
+        max-width: 940px;
     }
 
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-left: 0;
-        padding-right: 0;
+    .bs-sidebar {
+        padding-left:20px;
+    }
+}
+@media screen and (max-width: 767px) {
+    div.text-right, div.text-center {
+        text-align: left;
+    }
+}
+
+.brand-image {
+    display: inline-block;
+    float: left;
+    height: 40px;
+    margin-top: -10px;
+}
+
+.bs-sidebar.affix {
+    position: static;
+}
+
+.bs-sidenav {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.bs-sidebar .nav>li>a {
+    display: block;
+    padding: 4px 20px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #767676;
+}
+
+.bs-sidebar .nav>li>a:focus,.bs-sidebar .nav>li>a:hover {
+    padding-left: 19px;
+    color: #337AB7;
+    text-decoration: none;
+    background-color: transparent;
+    border-left: 1px solid #337AB7;
+}
+
+.bs-sidebar .nav>.active:focus>a,.bs-sidebar .nav>.active:hover>a,.bs-sidebar .nav>.active>a {
+    padding-left: 18px;
+    font-weight: 700;
+    color: #337AB7;
+    background-color: transparent;
+    border-left: 2px solid #337AB7;
+}
+
+.bs-sidebar .nav .nav {
+    display: none;
+    padding-bottom: 10px;
+}
+
+.bs-sidebar .nav .nav>li>a {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 30px;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.bs-sidebar .nav .nav>li>a:focus,.bs-sidebar .nav .nav>li>a:hover {
+    padding-left: 29px;
+}
+
+.bs-sidebar .nav .nav>.active:focus>a,.bs-sidebar .nav .nav>.active:hover>a,.bs-sidebar .nav .nav>.active>a {
+    padding-left: 28px;
+    font-weight: 500;
+}
+
+.back-to-top {
+    display: none;
+    padding: 4px 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #767676;
+    &:hover {
+        color: #337AB7;
+        text-decoration: none;
+    }
+}
+
+a h3 {
+    color: #333333;
+    &:hover {
+        color: #337AB7;
+        text-decoration: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .back-to-top {
+        display:block;
+    }
+}
+
+@media (min-width: 992px) {
+    .bs-sidebar .nav>.active>ul {
+        display:block;
     }
 
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
+    .bs-sidebar.affix,.bs-sidebar.affix-bottom {
+        width: 213px;
     }
 
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
+    .bs-sidebar.affix {
+        position: fixed;
+        top: 20px;
     }
+
+    .bs-sidebar.affix-bottom {
+        position: absolute;
+    }
+
+    .bs-sidebar.affix .bs-sidenav,.bs-sidebar.affix-bottom .bs-sidenav {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .bs-sidebar.affix,.bs-sidebar.affix-bottom {
+        width:263px;
+    }
+}
+
+.vertical-center {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+}
+
+.vertical-center {
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+}
+
+.m-t-10 {
+    margin-top: 10px;
 }
